tuzatish kiritildi
